# manim

./: .gitignore  README.md  pyproject.toml  requirements.txt
paramat_manim/: __init__.py
paramat_manim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
paramat_manim/creatures/: __init__.py  animations.py  euler.py
videos/complexes/: scenes.py
