[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paramat-manim"
version = "0.0.0"
description = "Shared Manim utilities for Paramat videos"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["paramat_manim*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
paramat_manim = ["assets/**/*.svg"]


